# mksh

./: CMakeLists.txt  README.md
docs/: grammar.md
include/shell/: builtin.hpp  executor.hpp  lexer.hpp  shell.hpp  token.hpp
src/: builtin.cpp  builtins.cpp  executor.cpp  lexer.cpp  main.cpp  shell.cpp
